--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -31,6 +31,16 @@ h1 {
 	font-size: 250%;
 }
 
+.jivi-front {
+        background-color: pink;
+        width: 70%;
+        height: 100px;
+        margin: auto;
+        padding: 5px;
+        text-align: center;
+        font-size: 90%;
+}
+
 .card-back {
 	background-color: palevioletred;
 	width: 70%;
