--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -21,6 +21,11 @@ h1 {
 	text-align: center;
 }
 
+.col-4 {
+	padding: 5px;
+	text-align: center;
+}
+
 .card-front {
 	background-color: pink;
 	width: 70%;
@@ -30,6 +35,27 @@ h1 {
 	text-align: center;
 	font-size: 250%;
 }
+
+.field {
+        background-color: green;
+        height: 400px;
+        margin: auto;
+        padding: 5px;
+        text-align: center;
+        font-size: 90%;
+	border: 3px solid black;
+}
+
+.player {
+        background-color: yellow;
+        height: 400px;
+        margin: auto;
+        padding: 5px;
+        text-align: center;
+        font-size: 90%;
+	border: 3px solid black;
+}
+
 
 .jivi-front {
         background-color: pink;
