--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -38,22 +38,28 @@ h1 {
 
 .field {
         background-color: green;
+	width: 400px;
         height: 400px;
         margin: auto;
         padding: 5px;
         text-align: center;
         font-size: 90%;
 	border: 3px solid black;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .player {
         background-color: yellow;
+	width: 400px;
         height: 400px;
         margin: auto;
         padding: 5px;
         text-align: center;
         font-size: 90%;
 	border: 3px solid black;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 
@@ -65,6 +71,7 @@ h1 {
         padding: 5px;
         text-align: center;
         font-size: 90%;
+	display: inline-block;
 }
 
 .card-back {
