--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -45,7 +45,7 @@ h1 {
         text-align: center;
         font-size: 90%;
 	border: 3px solid black;
-	display: table-cell;
+	display: block;
 	vertical-align: middle;
 }
 
