--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,7 @@
 
 h1 {
 	text-align: center;
+	background-color: orange;
 }
 
 .col-md {
@@ -24,16 +25,6 @@ h1 {
 .col-4 {
 	padding: 5px;
 	text-align: center;
-}
-
-.card-front {
-	background-color: pink;
-	width: 70%;
-	height: 80px;
-	margin: auto;
-	padding: 5px;
-	text-align: center;
-	font-size: 250%;
 }
 
 .field {
@@ -85,18 +76,3 @@ h1 {
 	display: inline-block;
 }
 
-.card-back {
-	background-color: palevioletred;
-	width: 70%;
-	height: 80px;
-	margin: auto;
-	padding: 5px;
-}
-
-.card-matched {
-	background-color: palegreen;
-	width: 70%;
-	height: 80px;
-	margin: auto;
-	padding: 5px;
-}
