added multiplayer support

--- a/lib/jivi_web/templates/page/game.html.eex
+++ b/lib/jivi_web/templates/page/game.html.eex
@@ -3,6 +3,7 @@
     <h1>Jivi Game: <%= @game %></h1>
     <script>
       window.gameName = "<%= @game %>";
+      window.playerName = "<%= @player %>";
     </script>
     <div id="root">
       <p>React app not loaded...</p>
