--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -11,6 +11,15 @@ h1 {
 	background-color: orange;
 }
 
+h3 {
+	text-align: center;
+	background-color: pink;
+}
+
+row {
+	text-align: center;
+}
+
 .col-md {
 	background-color: palegoldenrod;
 	border-style: solid;
