Jivi image movement

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -64,7 +64,7 @@ row {
 
 
 .jivi-front {
-        background-color: pink;
+        background-color: palegoldenrod;
         width: 70%;
         height: 200px;
         margin: auto;
@@ -84,4 +84,3 @@ row {
         font-size: 90%;
 	display: inline-block;
 }
-
