--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -49,6 +49,17 @@ row {
 	vertical-align: middle;
 }
 
+.killed {
+        background-color: yellow;
+	width: 400px;
+        height: 400px;
+        margin: auto;
+        padding: 5px;
+        text-align: center;
+        font-size: 90%;
+	border: 3px solid black;
+}
+
 .player {
         background-color: yellow;
 	width: 400px;
