--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,9 @@
 /* This file is for your main application css. */
 @import "bootstrap";
 
+.index {
+	padding: 50px;
+}
 .containter {
 	text-align: center;
 }
@@ -36,7 +39,7 @@ row {
 .field {
         background-color: lightgreen;
 	width: 100%;
-        height: 90%;
+        height: 100%;
         margin: auto;
         padding: 5px;
         text-align: center;
@@ -46,7 +49,7 @@ row {
 	vertical-align: middle;
 }
 
-.flex-container {
+.killed {
         background-color: crimson;
 	width: 400px;
         margin: auto;
@@ -56,12 +59,17 @@ row {
 	display: flex;
 }
 
-.killed {
-	border: 2px solid black;
+.p1 {
+	border: 5px solid orchid;
+	background-color: orchid;
+}
+.p2 {
+	border: 5px solid orange;
+	background-color: orange;
 }
 
 .player {
-	width: 400px;
+	width: 70%;
         height: 400px;
         margin: auto;
         padding: 5px;
@@ -79,19 +87,16 @@ row {
         margin: auto;
         padding: 5px;
         text-align: center;
-        font-size: 90%;
 	display: inline-block;
 	cursor: pointer;
 }
 
 .jivi-selected {
-        background-color: orange;
         width: 100%;
         height: 100%;
         margin: auto;
         padding: 5px;
         text-align: center;
-        font-size: 90%;
 	display: inline-block;
 }
 
@@ -109,6 +114,20 @@ row {
 
 .message {
 	text-align: center;
-	font-family: cursive;
+	font-family: sans-serif;
         color: red;
+}
+
+.jivi-back {
+	margin-top: 30px;
+}
+.category {
+	font-size: 130%;
+	font-weight: bold;
+	color: #B22222;
+}
+.owner {
+	color: darkviolet;
+	font-size: 130%;
+	font-weight: bold;
 }
