--- a/lib/jivi_web/templates/layout/app.html.eex
+++ b/lib/jivi_web/templates/layout/app.html.eex
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="flex-container">
       <%= if get_flash(@conn, :info) || get_flash(@conn, :error) do %>
       <div class="row">
         <div class="col-12">
