--- a/lib/jivi_web/templates/page/index.html.eex
+++ b/lib/jivi_web/templates/page/index.html.eex
@@ -1,11 +1,13 @@
+<h1 id="index-page">Join a Game</h1>
+<div class="index">
 <div class="row">
   <div class="col">
-    <h1 id="index-page">Join a Game</h1>
     <p><label for="gameName">Enter Game</label><br/>
     <input type="text" id="gameName"/></p>
     <p><label for="playerName">Enter Player Name</label><br/>
     <input type="text" id="playerName"/></p>
-    <a href="" onclick="this.href='/game/'+document.getElementById('gameName').value+'/player/'+document.getElementById('playerName').value">Join</a>  
+    <a href="" class="btn btn-primary" onclick="this.href='/game/'+document.getElementById('gameName').value+'/player/'+document.getElementById('playerName').value">Join</a>  
   </div>
+</div>
 </div>
 
